# jules-nightly-test

./: .env  .gitignore  README.md  ROADMAP.md  SETUP_GUIDE.md  changes.patch  pr_description.txt  pyproject.toml
.github/workflows/: auto-merge-to-integration.yml  ci.yml  dispatch-after-merge.yml  morning-report.yml  session-watchdog.yml  turn-switch.yml
.nightly/: COMMANDER.md  ci.sh  tasks.yml
.nightly/archives/: tasks_20260714_dryrun2.yml
.nightly/logs/: 2026-07-13-turn1.json  2026-07-14-turn1.json  2026-07-15-sessions.json  2026-07-15-turn1.json  2026-07-15-turn2.json  2026-07-16-turn1.json  2026-07-16-turn2.json
.nightly/prompts/: 2026-07-18-T1-01.md  2026-07-18-T2-01.md  2026-07-19-T1-01.md  2026-07-19-T2-01.md  2026-07-20-T1-01.md  2026-07-20-T2-01.md  2026-07-21-T1-01.md  2026-07-21-T2-01.md  2026-07-22-T1-01.md.obsolete  2026-07-23-T2-01.md  2026-07-24-T2-01.md  night3-t1.md  (+1 more)
commander/: approve.ps1  build_prompt.py  commander.ps1  config.py  create_alert_issue.py  parse_output.py  pr_checker.py  prompt-suffix.txt  state_manager.py  validate_proposal.py
docs/: dashboard-design-layer1.md  lessons.md  x1-impact-map.md
jules_nightly_webui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logs/: .gitkeep  _probe.json
nightly-pipeline/: AGENTS.md
tests/: conftest.py  test_app.py  test_build_prompt.py  test_config.py  test_create_alert_issue.py  test_dashboard_api.py  test_nightly.py  test_parse_output.py  test_pr_checker.py  test_state_manager.py  test_validate_proposal.py
webui/: __init__.py  app.py  dashboard.html  models.py  start-dashboard.bat
(+18 files in other folders)
